# badbitch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: android.yml  ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/llmdesk/app/: MainActivity.kt
android/rust/: Cargo.toml
android/rust/src/: lib.rs
badbitch/: Cargo.toml
badbitch-macros/: Cargo.toml
badbitch-macros/src/: lib.rs
badbitch/src/: agent.rs  classify.rs  compact.rs  config.rs  debug.rs  http.rs  lib.rs  main.rs  ollama.rs  prompt.rs  recovery_calls.rs  shell.rs  store.rs  util.rs
badbitch/src/tool/: corpus.rs  dossier.rs  entity.rs  geo.rs  graph.rs  infra.rs  links.rs  maltego.rs  mod.rs  neo4j.rs  people.rs  property.rs  shell.rs  web.rs
core/: Cargo.toml
core/src/: agent.rs  autotune.rs  backend.rs  controller.rs  ingest.rs  lib.rs  protocol.rs  tools.rs
core/src/remote/: client.rs  mod.rs  pairing.rs  server.rs  tls.rs
core/tests/: remote_roundtrip.rs
desktop/: Cargo.toml
desktop/src/: main.rs
maltego_transforms/: README.md  project.py  requirements.txt
maltego_transforms/transforms/: __init__.py  badbitch_case_expand.py  badbitch_common.py  badbitch_expand_entity.py  badbitch_extract_entities.py
packaging/: badbitch-rs.desktop  badbitch-setup  postinst
scripts/: build-deb.sh  install.sh  shell-aliases.sh
ui/: Cargo.toml
ui/src/: lib.rs
