[package]
name = "badbitch"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "badbitch"
path = "src/lib.rs"

[[bin]]
name = "badbitch"
path = "src/main.rs"

[[bin]]
name = "badbitch-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default = []
# The native desktop GUI (egui/eframe). Opt-in so the CLI builds stay lean and dependency-free:
#   cargo build --release --features gui --bin badbitch-gui
gui = ["dep:eframe"]

[dependencies]
badbitch-macros = { path = "../badbitch-macros" }
eframe = { version = "0.31", optional = true, default-features = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "rt", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.12"
configparser = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
urlencoding = "2"
dirs = "5"
base64 = "0.22"
