[package]
name = "llm-desk-core"
version = "0.2.0"
edition = "2021"
description = "Backend, agent loop, tool registry, controller and secure remote protocol for llm-desk"

[dependencies]
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Remote access (TLS WebSocket, blocking — matches the app's thread model)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tungstenite = "0.24"
rcgen = "0.13"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
